# ai-storefront-platform

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_auth_tenancy_tables.py  002_create_catalog_tables.py  003_create_storefront_config_table.py  15e696ca6d7d_alter_storefront_config_custom_css_to_.py  6d8d3ca665cb_create_visits_table.py  9513201a399e_create_media_assets_table.py  b2c3d4e5f6a7_create_pos_shifts.py  (+30 more)
backend/app/: main.py
backend/scripts/: bootstrap_db.py  init-db.sql
backend/tests/: conftest.py  m2_helpers.py  test_ai_chat.py  test_analytics.py  test_audit_events.py  test_auth.py  test_cashier_role.py  test_customer_link.py  test_customers.py  test_health.py  test_inventory.py  test_m12_customer_orders.py  test_m12_fulfillment.py  test_m12_shipping.py  test_m13_pos_today.py  test_m13_repeat_customers.py  test_m13_revenue.py  test_m13_sales_report.py  test_m2_media_list.py  test_m2_media_presign.py  test_m2_public_slug_scoping.py  test_m2_storefront_config.py  test_m2_visits.py  test_m3_integration.py  test_m3_numbering.py  test_m6p2_role_and_export.py  test_members.py  test_notification_dispatch.py  test_notification_preferences.py  test_notification_services.py  test_platform_admin.py  test_platform_admin_rls.py  test_pos.py  test_pos_shifts.py  test_product_variants.py  test_public_storefront_variants.py  test_rls_invited_email.py  test_rls_isolation.py  test_storefront_ai_chat.py  test_tenants.py
(+199 files in other folders)
